<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_leaguebg">Desired_leaguebg</string>
    <string name="swoosh_logo">swoosh_logo</string>
    <string name="desired_league">Desired League</string>
    <string name="Beginner">Beginner</string>
    <string name="Baller">Baller</string>
    <string name="Finish">Finish</string>
    <string name="I_am_a">I am a</string>
    <string name="next">NEXT</string>
    <!--string name="co_ed">Co-Ed</string-->
    <string name="women_s">Women\'s</string>
    <!--string name="mens">Mens</string>
    <string name="mens">Mens</string-->
    <string name="mens">Mens</string>
    <!--string name="co_ed">Co-Ed</string-->
    <string name="co_ed">Co-Ed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">On Going All Out</string>
    <string name="find_a_team_in_your_city_and_dominate_them_all">Find a team in your city, and dominate them all
    </string>
    <string name="get_started">Get Started</string>
    <string name="welcomescreenbg">welcomescreenbg</string>
    <string name="skillbg">skillbg</string>
    <string name="search_league">Looking for a co-ed beginner league near you....</string>
</resources>
