<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="centerCrop" android:contentDescription="@string/skillbg"/>
    <ImageView
            android:layout_width="128dp"
            android:layout_height="64dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"/>

    <TextView
            android:text="@string/I_am_a"
            android:layout_width="179dp"
            android:layout_height="47dp"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textSize="18sp" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.45"
            android:gravity="center_horizontal|center_vertical"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">
        <ToggleButton
                android:text="@string/Beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleBeginner" android:textOff="@string/Beginner"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:layout_marginBottom="16dp" android:textStyle="bold"
                android:fontFamily="@font/montserrat" android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>

        <ToggleButton
                android:text="@string/Baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleBaller" android:textOff="@string/Baller"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:layout_marginBottom="16dp" android:textStyle="bold"
                android:fontFamily="@font/montserrat" android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" android:foregroundGravity="center_vertical"/>
    </LinearLayout>
    <Button
            android:text="@string/Finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillBtnFinish" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textStyle="bold"
            android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>