<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/desired_leaguebg"/>

    <ImageView
            android:layout_width="128dp"
            android:layout_height="64dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="179dp"
            android:layout_height="47dp"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textSize="18sp" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.45"
            android:gravity="center_horizontal|center_vertical"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="286dp"
            android:layout_height="186dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintVertical_bias="0.167">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:textOff="@string/mens"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:layout_marginBottom="16dp" android:textStyle="bold"
                android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/women_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="@string/women_s"
                android:textOn="@string/women_s" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat" android:textStyle="bold"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textStyle="bold"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat" android:textStyle="bold"
            android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>