<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/welcomescreenbg"/>
    <ImageView
            android:layout_width="128dp"
            android:layout_height="64dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="46sp"
            android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textStyle="bold" android:textAllCaps="true"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_them_all"
            android:layout_width="241dp"
            android:layout_height="48dp"
            android:id="@+id/textView4" android:textColor="@color/colorAccent"
            android:singleLine="false" android:gravity="center" android:textStyle="bold"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:fontFamily="@font/montserrat" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/getStartedBtn"
            app:layout_constraintVertical_bias="0.035" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/montserrat"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.0" android:background="@drawable/swoosh_button"
            android:ellipsize="middle"
            android:requiresFadingEdge="horizontal"
            style="@style/Widget.AppCompat.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>